processor/src/test/resources/model/good/DefaultNamingPolicyEnum.java
package com.bluelinelabs.logansquare.processor;

import com.bluelinelabs.logansquare.annotation.JsonEnum;

@JsonEnum
public enum DefaultNamingPolicyEnum {
    ONE,
    TWO
}