processor/src/test/resources/model/bad/FieldWithoutObjectModel.java
package com.bluelinelabs.logansquare.processor.bad;

import com.bluelinelabs.logansquare.annotation.JsonField;

public class FieldWithoutObjectModel {

    @JsonField
    public String string;

}
